--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <img src="https://c.tenor.com/Z8ezUHZzcLoAAAAC/love.gif" alt="" />
     <h1>Happy Aniversary 1 Months</h1>
     <h1>Kamu seneng ngga pacaran sama aku?</h1>
-    <button id="btn_seneng" onclick="alert('I LOVE YOU SAYANG')">Seneng</button>
+    <button id="btn_seneng" onclick="alert('I LOVE YOU SAYANG ' <br> 'Semoga kita bisa sama-sama terus ayang')">Seneng</button>
     <button id="btn_ngga" onclick="ngga(this)" style="position: relative">NGGGA SENENG</button>
   </body>
 
